[package]
name = "rusty_glyphs"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.29.2"
bitcoincore-rpc = "0.16.0"
secp256k1 = "0.24.0"
hex = "0.4.3"
sha2 = "0.10.2"
clap = "3.1.18"
thiserror = "1.0.31"
unicode-categories = "0.1.1"
bech32 = "0.8.1"
ed25519-dalek = "1.0.1"
base64 = "0.13.0"